--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,11 @@ python-dotenv==1.0.0
 pytest==7.4.3
 pytest-django==4.7.0
 pytest-asyncio==0.21.1
+Django==4.2.7
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+django-cors-headers==4.3.1
+channels==4.0.0
+channels-redis==4.1.0
+psycopg2-binary==2.9.7
+redis==5.0.1
